[package]
name = "spirals"
version = "0.1.0"
authors = ["Amey Kusurkar <amey1000@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = { version = "0.23.12", optional = true }

# WebAssembly dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[features]
default = ["native"]
native = ["image"]
wasm = []
